# assistant

./: pyproject.toml
src/assistant/cli/: codas.py  histrep.py
src/assistant/history/: __init__.py  browser.py  code.py  history.py  zsh.py
src/assistant/llm/: llm.py  prompts.py
src/assistant/toggl/: toggl.py
