[build-system]
requires = ["setuptools>=45", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.1.0"
description = "A tool for analyzing and reporting user activity history from various sources"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas",
    "langchain",
]

[project.scripts]
histrep = "assistant.cli.histrep:main"

[tool.setuptools]
package-dir = {"" = "src"}

